<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_layout"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/gurugram_haryana"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="68dp"
        android:text="@string/current_temprature"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/txt_temp"
        android:layout_width="72dp"
        android:layout_height="64dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/txt_weatherType" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:text="@string/c"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="@+id/txt_temp"
        app:layout_constraintTop_toBottomOf="@+id/txt_weatherType" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:text="@string/humidity"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_humidity"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txt_humidity"
        android:layout_width="73dp"
        android:layout_height="66dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txt_temp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/percentage"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/txt_humidity"
        app:layout_constraintTop_toBottomOf="@+id/txt_temp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:text="@string/weather"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txt_weatherType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:text="@string/clouds"
        android:textColor="#fff"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="8dp"
        android:text="@string/wind_speed"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.011" />

    <TextView
        android:id="@+id/txt_windSpeed"
        android:layout_width="73dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/txt_humidity" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/km_hr"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="@+id/txt_windSpeed"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.004" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>